lab4/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> WHILE ( condition ) instruction
Rule 7     instruction -> FOR var = expression : expression instruction
Rule 8     instruction -> IF ( condition ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 9     instruction -> IF ( condition ) instruction  [precedence=nonassoc, level=1]
Rule 10    instruction -> assignment_instruction ;
Rule 11    instruction -> reserved_instruction ;
Rule 12    instruction -> { instructions }
Rule 13    reserved_instruction -> PRINT expression_list
Rule 14    reserved_instruction -> RETURN expression_list
Rule 15    reserved_instruction -> CONTINUE
Rule 16    reserved_instruction -> BREAK
Rule 17    expression_list -> expression
Rule 18    expression_list -> expression_list , expression
Rule 19    assignment_instruction -> matrix_idx assignment_operator expression
Rule 20    assignment_instruction -> var assignment_operator expression
Rule 21    assignment_operator -> DIVASSIGN  [precedence=right, level=9]
Rule 22    assignment_operator -> MULTASSIGN  [precedence=right, level=9]
Rule 23    assignment_operator -> SUBASSIGN  [precedence=right, level=9]
Rule 24    assignment_operator -> ADDASSIGN  [precedence=right, level=9]
Rule 25    assignment_operator -> =
Rule 26    expression -> STRING
Rule 27    expression -> variable
Rule 28    expression -> ONES ( expression_list )
Rule 29    expression -> ZEROS ( expression_list )
Rule 30    expression -> EYE ( expression_list )
Rule 31    expression -> vector
Rule 32    expression -> matrix
Rule 33    expression -> expression '  [precedence=left, level=8]
Rule 34    expression -> - expression  [precedence=left, level=4]
Rule 35    expression -> expression DOTDIV expression  [precedence=left, level=7]
Rule 36    expression -> expression DOTMULT expression  [precedence=left, level=7]
Rule 37    expression -> expression DOTSUB expression  [precedence=left, level=5]
Rule 38    expression -> expression DOTADD expression  [precedence=left, level=5]
Rule 39    expression -> expression / expression  [precedence=left, level=6]
Rule 40    expression -> expression * expression  [precedence=left, level=6]
Rule 41    expression -> expression - expression  [precedence=left, level=4]
Rule 42    expression -> expression + expression  [precedence=left, level=4]
Rule 43    var -> ID
Rule 44    condition -> expression GE expression  [precedence=nonassoc, level=3]
Rule 45    condition -> expression LE expression  [precedence=nonassoc, level=3]
Rule 46    condition -> expression GT expression  [precedence=nonassoc, level=3]
Rule 47    condition -> expression LT expression  [precedence=nonassoc, level=3]
Rule 48    condition -> expression NOTEQUAL expression  [precedence=nonassoc, level=3]
Rule 49    condition -> expression EQUAL expression  [precedence=nonassoc, level=3]
Rule 50    matrix -> [ vectors ]
Rule 51    vectors -> vector
Rule 52    vectors -> vectors , vector
Rule 53    vector -> [ variables ]
Rule 54    variables -> variable
Rule 55    variables -> variables , variable
Rule 56    variable -> string
Rule 57    variable -> matrix_idx
Rule 58    variable -> number
Rule 59    variable -> var
Rule 60    number -> FLOAT
Rule 61    number -> INT
Rule 62    string -> STRING
Rule 63    matrix_idx -> var [ variables ]

Terminals, with rules where they appear:

'                    : 33
(                    : 6 8 9 28 29 30
)                    : 6 8 9 28 29 30
*                    : 40
+                    : 42
,                    : 18 52 55
-                    : 34 41
/                    : 39
:                    : 7
;                    : 10 11
=                    : 7 25
ADDASSIGN            : 24
BREAK                : 16
CONTINUE             : 15
DIVASSIGN            : 21
DOTADD               : 38
DOTDIV               : 35
DOTMULT              : 36
DOTSUB               : 37
ELSE                 : 8
EQUAL                : 49
EYE                  : 30
FLOAT                : 60
FOR                  : 7
GE                   : 44
GT                   : 46
ID                   : 43
IF                   : 8 9
INT                  : 61
LE                   : 45
LT                   : 47
MULTASSIGN           : 22
NOTEQUAL             : 48
ONES                 : 28
PRINT                : 13
RETURN               : 14
STRING               : 26 62
SUBASSIGN            : 23
WHILE                : 6
ZEROS                : 29
[                    : 50 53 63
]                    : 50 53 63
error                : 
{                    : 12
}                    : 12

Nonterminals, with rules where they appear:

assignment_instruction : 10
assignment_operator  : 19 20
condition            : 6 8 9
expression           : 7 7 17 18 19 20 33 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 44 44 45 45 46 46 47 47 48 48 49 49
expression_list      : 13 14 18 28 29 30
instruction          : 4 5 6 7 8 8 9
instructions         : 3 5 12
instructions_opt     : 1
matrix               : 32
matrix_idx           : 19 57
number               : 58
program              : 0
reserved_instruction : 11
string               : 56
var                  : 7 20 59 63
variable             : 27 54 55
variables            : 53 55 63
vector               : 31 51 52
vectors              : 50 52


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (63) matrix_idx -> . var [ variables ]
    (43) var -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (63) matrix_idx -> . var [ variables ]
    (43) var -> . ID
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    instruction                    shift and go to state 18
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 4

    (4) instructions -> instruction .
    WHILE           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> WHILE . ( condition ) instruction
    (               shift and go to state 19


state 6

    (7) instruction -> FOR . var = expression : expression instruction
    (43) var -> . ID
    ID              shift and go to state 17

    var                            shift and go to state 20

state 7

    (20) assignment_instruction -> var . assignment_operator expression
    (63) matrix_idx -> var . [ variables ]
    (21) assignment_operator -> . DIVASSIGN
    (22) assignment_operator -> . MULTASSIGN
    (23) assignment_operator -> . SUBASSIGN
    (24) assignment_operator -> . ADDASSIGN
    (25) assignment_operator -> . =
    [               shift and go to state 22
    DIVASSIGN       shift and go to state 23
    MULTASSIGN      shift and go to state 24
    SUBASSIGN       shift and go to state 25
    ADDASSIGN       shift and go to state 26
    =               shift and go to state 27

    assignment_operator            shift and go to state 21

state 8

    (8) instruction -> IF . ( condition ) instruction ELSE instruction
    (9) instruction -> IF . ( condition ) instruction
    (               shift and go to state 28


state 9

    (10) instruction -> assignment_instruction . ;
    ;               shift and go to state 29


state 10

    (11) instruction -> reserved_instruction . ;
    ;               shift and go to state 30


state 11

    (12) instruction -> { . instructions }
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (63) matrix_idx -> . var [ variables ]
    (43) var -> . ID
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    instructions                   shift and go to state 31
    instruction                    shift and go to state 4
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 12

    (19) assignment_instruction -> matrix_idx . assignment_operator expression
    (21) assignment_operator -> . DIVASSIGN
    (22) assignment_operator -> . MULTASSIGN
    (23) assignment_operator -> . SUBASSIGN
    (24) assignment_operator -> . ADDASSIGN
    (25) assignment_operator -> . =
    DIVASSIGN       shift and go to state 23
    MULTASSIGN      shift and go to state 24
    SUBASSIGN       shift and go to state 25
    ADDASSIGN       shift and go to state 26
    =               shift and go to state 27

    assignment_operator            shift and go to state 32

state 13

    (13) reserved_instruction -> PRINT . expression_list
    (17) expression_list -> . expression
    (18) expression_list -> . expression_list , expression
    (26) expression -> . STRING
    (27) expression -> . variable
    (28) expression -> . ONES ( expression_list )
    (29) expression -> . ZEROS ( expression_list )
    (30) expression -> . EYE ( expression_list )
    (31) expression -> . vector
    (32) expression -> . matrix
    (33) expression -> . expression '
    (34) expression -> . - expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . expression DOTMULT expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression / expression
    (40) expression -> . expression * expression
    (41) expression -> . expression - expression
    (42) expression -> . expression + expression
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (53) vector -> . [ variables ]
    (50) matrix -> . [ vectors ]
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    -               shift and go to state 42
    [               shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    expression_list                shift and go to state 33
    expression                     shift and go to state 34
    variable                       shift and go to state 36
    vector                         shift and go to state 40
    matrix                         shift and go to state 41
    string                         shift and go to state 43
    matrix_idx                     shift and go to state 44
    number                         shift and go to state 45
    var                            shift and go to state 46

state 14

    (14) reserved_instruction -> RETURN . expression_list
    (17) expression_list -> . expression
    (18) expression_list -> . expression_list , expression
    (26) expression -> . STRING
    (27) expression -> . variable
    (28) expression -> . ONES ( expression_list )
    (29) expression -> . ZEROS ( expression_list )
    (30) expression -> . EYE ( expression_list )
    (31) expression -> . vector
    (32) expression -> . matrix
    (33) expression -> . expression '
    (34) expression -> . - expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . expression DOTMULT expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression / expression
    (40) expression -> . expression * expression
    (41) expression -> . expression - expression
    (42) expression -> . expression + expression
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (53) vector -> . [ variables ]
    (50) matrix -> . [ vectors ]
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    -               shift and go to state 42
    [               shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    expression_list                shift and go to state 50
    expression                     shift and go to state 34
    variable                       shift and go to state 36
    vector                         shift and go to state 40
    matrix                         shift and go to state 41
    string                         shift and go to state 43
    matrix_idx                     shift and go to state 44
    number                         shift and go to state 45
    var                            shift and go to state 46

state 15

    (15) reserved_instruction -> CONTINUE .
    ;               reduce using rule 15 (reserved_instruction -> CONTINUE .)


state 16

    (16) reserved_instruction -> BREAK .
    ;               reduce using rule 16 (reserved_instruction -> BREAK .)


state 17

    (43) var -> ID .
    [               reduce using rule 43 (var -> ID .)
    DIVASSIGN       reduce using rule 43 (var -> ID .)
    MULTASSIGN      reduce using rule 43 (var -> ID .)
    SUBASSIGN       reduce using rule 43 (var -> ID .)
    ADDASSIGN       reduce using rule 43 (var -> ID .)
    =               reduce using rule 43 (var -> ID .)
    '               reduce using rule 43 (var -> ID .)
    DOTDIV          reduce using rule 43 (var -> ID .)
    DOTMULT         reduce using rule 43 (var -> ID .)
    DOTSUB          reduce using rule 43 (var -> ID .)
    DOTADD          reduce using rule 43 (var -> ID .)
    /               reduce using rule 43 (var -> ID .)
    *               reduce using rule 43 (var -> ID .)
    -               reduce using rule 43 (var -> ID .)
    +               reduce using rule 43 (var -> ID .)
    ,               reduce using rule 43 (var -> ID .)
    ;               reduce using rule 43 (var -> ID .)
    GE              reduce using rule 43 (var -> ID .)
    LE              reduce using rule 43 (var -> ID .)
    GT              reduce using rule 43 (var -> ID .)
    LT              reduce using rule 43 (var -> ID .)
    NOTEQUAL        reduce using rule 43 (var -> ID .)
    EQUAL           reduce using rule 43 (var -> ID .)
    ]               reduce using rule 43 (var -> ID .)
    :               reduce using rule 43 (var -> ID .)
    )               reduce using rule 43 (var -> ID .)
    WHILE           reduce using rule 43 (var -> ID .)
    FOR             reduce using rule 43 (var -> ID .)
    IF              reduce using rule 43 (var -> ID .)
    {               reduce using rule 43 (var -> ID .)
    PRINT           reduce using rule 43 (var -> ID .)
    RETURN          reduce using rule 43 (var -> ID .)
    CONTINUE        reduce using rule 43 (var -> ID .)
    BREAK           reduce using rule 43 (var -> ID .)
    ID              reduce using rule 43 (var -> ID .)


state 18

    (5) instructions -> instructions instruction .
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    IF              reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 19

    (6) instruction -> WHILE ( . condition ) instruction
    (44) condition -> . expression GE expression
    (45) condition -> . expression LE expression
    (46) condition -> . expression GT expression
    (47) condition -> . expression LT expression
    (48) condition -> . expression NOTEQUAL expression
    (49) condition -> . expression EQUAL expression
    (26) expression -> . STRING
    (27) expression -> . variable
    (28) expression -> . ONES ( expression_list )
    (29) expression -> . ZEROS ( expression_list )
    (30) expression -> . EYE ( expression_list )
    (31) expression -> . vector
    (32) expression -> . matrix
    (33) expression -> . expression '
    (34) expression -> . - expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . expression DOTMULT expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression / expression
    (40) expression -> . expression * expression
    (41) expression -> . expression - expression
    (42) expression -> . expression + expression
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (53) vector -> . [ variables ]
    (50) matrix -> . [ vectors ]
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    -               shift and go to state 42
    [               shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    condition                      shift and go to state 51
    expression                     shift and go to state 52
    variable                       shift and go to state 36
    vector                         shift and go to state 40
    matrix                         shift and go to state 41
    string                         shift and go to state 43
    matrix_idx                     shift and go to state 44
    number                         shift and go to state 45
    var                            shift and go to state 46

state 20

    (7) instruction -> FOR var . = expression : expression instruction
    =               shift and go to state 53


state 21

    (20) assignment_instruction -> var assignment_operator . expression
    (26) expression -> . STRING
    (27) expression -> . variable
    (28) expression -> . ONES ( expression_list )
    (29) expression -> . ZEROS ( expression_list )
    (30) expression -> . EYE ( expression_list )
    (31) expression -> . vector
    (32) expression -> . matrix
    (33) expression -> . expression '
    (34) expression -> . - expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . expression DOTMULT expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression / expression
    (40) expression -> . expression * expression
    (41) expression -> . expression - expression
    (42) expression -> . expression + expression
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (53) vector -> . [ variables ]
    (50) matrix -> . [ vectors ]
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    -               shift and go to state 42
    [               shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    var                            shift and go to state 46
    expression                     shift and go to state 54
    variable                       shift and go to state 36
    vector                         shift and go to state 40
    matrix                         shift and go to state 41
    string                         shift and go to state 43
    matrix_idx                     shift and go to state 44
    number                         shift and go to state 45

state 22

    (63) matrix_idx -> var [ . variables ]
    (54) variables -> . variable
    (55) variables -> . variables , variable
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 57
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    var                            shift and go to state 46
    variables                      shift and go to state 55
    variable                       shift and go to state 56
    string                         shift and go to state 43
    matrix_idx                     shift and go to state 44
    number                         shift and go to state 45

state 23

    (21) assignment_operator -> DIVASSIGN .
    STRING          reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    ONES            reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    ZEROS           reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    EYE             reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    -               reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    [               reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    FLOAT           reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    INT             reduce using rule 21 (assignment_operator -> DIVASSIGN .)
    ID              reduce using rule 21 (assignment_operator -> DIVASSIGN .)


state 24

    (22) assignment_operator -> MULTASSIGN .
    STRING          reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    ONES            reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    ZEROS           reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    EYE             reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    -               reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    [               reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    FLOAT           reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    INT             reduce using rule 22 (assignment_operator -> MULTASSIGN .)
    ID              reduce using rule 22 (assignment_operator -> MULTASSIGN .)


state 25

    (23) assignment_operator -> SUBASSIGN .
    STRING          reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    ONES            reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    ZEROS           reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    EYE             reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    -               reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    [               reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    FLOAT           reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    INT             reduce using rule 23 (assignment_operator -> SUBASSIGN .)
    ID              reduce using rule 23 (assignment_operator -> SUBASSIGN .)


state 26

    (24) assignment_operator -> ADDASSIGN .
    STRING          reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    ONES            reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    ZEROS           reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    EYE             reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    -               reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    [               reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    FLOAT           reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    INT             reduce using rule 24 (assignment_operator -> ADDASSIGN .)
    ID              reduce using rule 24 (assignment_operator -> ADDASSIGN .)


state 27

    (25) assignment_operator -> = .
    STRING          reduce using rule 25 (assignment_operator -> = .)
    ONES            reduce using rule 25 (assignment_operator -> = .)
    ZEROS           reduce using rule 25 (assignment_operator -> = .)
    EYE             reduce using rule 25 (assignment_operator -> = .)
    -               reduce using rule 25 (assignment_operator -> = .)
    [               reduce using rule 25 (assignment_operator -> = .)
    FLOAT           reduce using rule 25 (assignment_operator -> = .)
    INT             reduce using rule 25 (assignment_operator -> = .)
    ID              reduce using rule 25 (assignment_operator -> = .)


state 28

    (8) instruction -> IF ( . condition ) instruction ELSE instruction
    (9) instruction -> IF ( . condition ) instruction
    (44) condition -> . expression GE expression
    (45) condition -> . expression LE expression
    (46) condition -> . expression GT expression
    (47) condition -> . expression LT expression
    (48) condition -> . expression NOTEQUAL expression
    (49) condition -> . expression EQUAL expression
    (26) expression -> . STRING
    (27) expression -> . variable
    (28) expression -> . ONES ( expression_list )
    (29) expression -> . ZEROS ( expression_list )
    (30) expression -> . EYE ( expression_list )
    (31) expression -> . vector
    (32) expression -> . matrix
    (33) expression -> . expression '
    (34) expression -> . - expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . expression DOTMULT expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression / expression
    (40) expression -> . expression * expression
    (41) expression -> . expression - expression
    (42) expression -> . expression + expression
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (53) vector -> . [ variables ]
    (50) matrix -> . [ vectors ]
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    -               shift and go to state 42
    [               shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    condition                      shift and go to state 58
    expression                     shift and go to state 52
    variable                       shift and go to state 36
    vector                         shift and go to state 40
    matrix                         shift and go to state 41
    string                         shift and go to state 43
    matrix_idx                     shift and go to state 44
    number                         shift and go to state 45
    var                            shift and go to state 46

state 29

    (10) instruction -> assignment_instruction ; .
    WHILE           reduce using rule 10 (instruction -> assignment_instruction ; .)
    FOR             reduce using rule 10 (instruction -> assignment_instruction ; .)
    IF              reduce using rule 10 (instruction -> assignment_instruction ; .)
    {               reduce using rule 10 (instruction -> assignment_instruction ; .)
    PRINT           reduce using rule 10 (instruction -> assignment_instruction ; .)
    RETURN          reduce using rule 10 (instruction -> assignment_instruction ; .)
    CONTINUE        reduce using rule 10 (instruction -> assignment_instruction ; .)
    BREAK           reduce using rule 10 (instruction -> assignment_instruction ; .)
    ID              reduce using rule 10 (instruction -> assignment_instruction ; .)
    $end            reduce using rule 10 (instruction -> assignment_instruction ; .)
    }               reduce using rule 10 (instruction -> assignment_instruction ; .)
    ELSE            reduce using rule 10 (instruction -> assignment_instruction ; .)


state 30

    (11) instruction -> reserved_instruction ; .
    WHILE           reduce using rule 11 (instruction -> reserved_instruction ; .)
    FOR             reduce using rule 11 (instruction -> reserved_instruction ; .)
    IF              reduce using rule 11 (instruction -> reserved_instruction ; .)
    {               reduce using rule 11 (instruction -> reserved_instruction ; .)
    PRINT           reduce using rule 11 (instruction -> reserved_instruction ; .)
    RETURN          reduce using rule 11 (instruction -> reserved_instruction ; .)
    CONTINUE        reduce using rule 11 (instruction -> reserved_instruction ; .)
    BREAK           reduce using rule 11 (instruction -> reserved_instruction ; .)
    ID              reduce using rule 11 (instruction -> reserved_instruction ; .)
    $end            reduce using rule 11 (instruction -> reserved_instruction ; .)
    }               reduce using rule 11 (instruction -> reserved_instruction ; .)
    ELSE            reduce using rule 11 (instruction -> reserved_instruction ; .)


state 31

    (12) instruction -> { instructions . }
    (5) instructions -> instructions . instruction
    (6) instruction -> . WHILE ( condition ) instruction
    (7) instruction -> . FOR var = expression : expression instruction
    (8) instruction -> . IF ( condition ) instruction ELSE instruction
    (9) instruction -> . IF ( condition ) instruction
    (10) instruction -> . assignment_instruction ;
    (11) instruction -> . reserved_instruction ;
    (12) instruction -> . { instructions }
    (19) assignment_instruction -> . matrix_idx assignment_operator expression
    (20) assignment_instruction -> . var assignment_operator expression
    (13) reserved_instruction -> . PRINT expression_list
    (14) reserved_instruction -> . RETURN expression_list
    (15) reserved_instruction -> . CONTINUE
    (16) reserved_instruction -> . BREAK
    (63) matrix_idx -> . var [ variables ]
    (43) var -> . ID
    }               shift and go to state 59
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    IF              shift and go to state 8
    {               shift and go to state 11
    PRINT           shift and go to state 13
    RETURN          shift and go to state 14
    CONTINUE        shift and go to state 15
    BREAK           shift and go to state 16
    ID              shift and go to state 17

    instruction                    shift and go to state 18
    var                            shift and go to state 7
    assignment_instruction         shift and go to state 9
    reserved_instruction           shift and go to state 10
    matrix_idx                     shift and go to state 12

state 32

    (19) assignment_instruction -> matrix_idx assignment_operator . expression
    (26) expression -> . STRING
    (27) expression -> . variable
    (28) expression -> . ONES ( expression_list )
    (29) expression -> . ZEROS ( expression_list )
    (30) expression -> . EYE ( expression_list )
    (31) expression -> . vector
    (32) expression -> . matrix
    (33) expression -> . expression '
    (34) expression -> . - expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . expression DOTMULT expression
    (37) expression -> . expression DOTSUB expression
    (38) expression -> . expression DOTADD expression
    (39) expression -> . expression / expression
    (40) expression -> . expression * expression
    (41) expression -> . expression - expression
    (42) expression -> . expression + expression
    (56) variable -> . string
    (57) variable -> . matrix_idx
    (58) variable -> . number
    (59) variable -> . var
    (53) vector -> . [ variables ]
    (50) matrix -> . [ vectors ]
    (62) string -> . STRING
    (63) matrix_idx -> . var [ variables ]
    (60) number -> . FLOAT
    (61) number -> . INT
    (43) var -> . ID
    STRING          shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    EYE             shift and go to state 39
    -               shift and go to state 42
    [               shift and go to state 47
    FLOAT           shift and go to state 48
    INT             shift and go to state 49
    ID              shift and go to state 17

    matrix_idx                     shift and go to state 44
    expression                     shift and go to state 60
    variable                       shift and go to state 36
    vector                         shift and go to state 40
    matrix                         shift and go to state 41
    string                         shift and go to state 43
    number                         shift and go to state 45
    var                            shift and go to state 46

state 33

    (13) reserved_instruction -> PRINT expression_list .
    (18) expression_list -> expression_list . , expression
    ;               reduce using rule 13 (reserved_instruction -> PRINT expression_list .)
    ,               shift and go to state 61


state 34
